Closed Bug 488983 Opened 16 years ago Closed 15 years ago

2 * |mailnews/base/src/nsMsgGroupThread.cpp(...) : warning C4018: '>=' : signed/unsigned mismatch|

Categories

(MailNews Core :: Database, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: sgautherie, Assigned: sgautherie)

References

Details

(Whiteboard: [Initial issue fixed by bug 499995])

Attachments

(1 file)

[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090417 SeaMonkey/2.0b1pre] (experimental/_m-c_, home, optim default) (W2Ksp4) (http://hg.mozilla.org/mozilla-central/rev/9e06217fc471 +http://hg.mozilla.org/comm-central/rev/...) { mailnews/base/src/nsMsgGroupThread.cpp(238) : warning C4018: '>=' : signed/unsigned mismatch mailnews/base/src/nsMsgGroupThread.cpp(246) : warning C4018: '>=' : signed/unsigned mismatch } Code is { NS_IMETHODIMP nsMsgGroupThread::GetChildKeyAt(PRInt32 aIndex, nsMsgKey *aResult) NS_IMETHODIMP nsMsgGroupThread::GetChildAt(PRInt32 aIndex, nsIMsgDBHdr **aResult) } But aIndex "should" be PRUint32. +/- related to bug 488982.
Fixes |mailnews/base/src/nsMsgGroupThread.cpp(281) : warning C4101: 'threadParent' : unreferenced local variable|.
Attachment #373477 - Flags: superreview?(bienvenu)
Attachment #373477 - Flags: review?(bienvenu)
Blocks: 90906
Comment on attachment 373477 [details] [diff] [review] (Av1) Remove an unused 'threadParent' [Checkin: Comment 3] thx for the patch.
Attachment #373477 - Flags: superreview?(bienvenu)
Attachment #373477 - Flags: superreview+
Attachment #373477 - Flags: review?(bienvenu)
Attachment #373477 - Flags: review+
Attachment #373477 - Attachment description: (Av1) Remove an unused 'threadParent' → (Av1) Remove an unused 'threadParent' [Checkin: Comment 3]
Assignee: nobody → sgautherie.bz
Status: NEW → RESOLVED
Closed: 15 years ago
Depends on: 499995
Flags: in-testsuite-
Resolution: --- → FIXED
Whiteboard: [Initial issue fixed by bug 499995]
Target Milestone: --- → Thunderbird 3.0b3
No longer depends on: 488982
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: