Bug 488983 - 2 * |mailnews/base/src/nsMsgGroupThread.cpp(...) : warning C4018: '>=' : signed/unsigned mismatch|; (Av1) Remove an unused 'threadParent'; r+sr=bienvenu